--- a/assignments/assignment-1/index.html
+++ b/assignments/assignment-1/index.html
@@ -7,7 +7,8 @@
   </head>
 <body lang="en">
     <p style="font-family: Arial, sans-serif; color:orange; font-size: 100px;">
-        hello  ./page2.html</p>
+        hello  </p>
+        <a ./page2.html ><a/>
 
 </body>
   </html>
