--- a/assignments/assignment-1/page2.html
+++ b/assignments/assignment-1/page2.html
@@ -7,7 +7,6 @@
   </head>
 <body lang="en">
     <p style="font-family: Arial, sans-serif; color:orange; font-size: 100px;">
-        hello</p> 
-        <a href="https://www.westerncape.gov.za/sites/www.westerncape.gov.za/files/gettyimages-1131332215.jpg"></a>
+        hello <a href="https://www.westerncape.gov.za/sites/www.westerncape.gov.za/files/gettyimages-1131332215.jpg"></a></p>
 </body>
   </html>
