--- a/assignments/assignment-1/index.html
+++ b/assignments/assignment-1/index.html
@@ -3,12 +3,16 @@
   <head>
 
     <title>page1</title>
-
+    <style type="text/css" >a:link { text-decoration: underline; color: orange;}
+        a:visited { text-decoration: underline; color: darkorchid; }
+        a:hover {text-decoration: none; color: orange;}
+        a:active {text-decoration: none; color:darkorchid;
+        font-family: Arial, sans-serif; color:orange; font-size: 100px;}</style>
   </head>
 <body lang="en">
-    <p style="font-family: Arial, sans-serif; color:orange; font-size: 100px;">
+    <p>
         hello  </p>
-        <a ./page2.html ><a/>
+        <a ./page2.html >page2<a/>
 
 </body>
   </html>
