--- a/assignments/assignment-1/page2.html
+++ b/assignments/assignment-1/page2.html
@@ -3,10 +3,15 @@
   <head>
 
     <title>page1</title>
-
+<style type="text/css" >a:link { text-decoration: underline; color: orange;}
+a:visited { text-decoration: underline; color: darkorchid; }
+a:hover {text-decoration: none; color: orange;}
+a:active {text-decoration: none; color:darkorchid;
+font-family: Arial, sans-serif; color:orange; font-size: 100px;}</style>
   </head>
 <body lang="en">
-    <p style="font-family: Arial, sans-serif; color:orange; font-size: 100px;">
-        hello <a href="https://www.westerncape.gov.za/sites/www.westerncape.gov.za/files/gettyimages-1131332215.jpg"></a></p>
+    <p>
+        hello
+        <a href="https://www.westerncape.gov.za/sites/www.westerncape.gov.za/files/gettyimages-1131332215.jpg">pic</a></p> 
 </body>
   </html>
