functional version yea

--- a/assignments/assignment-1/index.html
+++ b/assignments/assignment-1/index.html
@@ -3,16 +3,17 @@
   <head>
 
     <title>page1</title>
-    <style type="text/css" >a:link { text-decoration: underline; color: orange;}
-        a:visited { text-decoration: underline; color: darkorchid; }
-        a:hover {text-decoration: none; color: orange;}
-        a:active {text-decoration: none; color:darkorchid;
-        font-family: Arial, sans-serif; color:orange; font-size: 100px;}</style>
+    <style type="text/css" >a:link { text-decoration: underline; color: greenyellow;}
+      a:visited { text-decoration: underline; color: greenyellow; }
+      a:hover {text-decoration: none; color: olivedrab;font-size: 200px;}
+      a:active {text-decoration: none; color:olivedrab; font-size: 200px;}
+      .text {font-family: Arial, sans-serif; color:greenyellow; font-size: 100px;}</style>
   </head>
 <body lang="en">
-    <p>
-        hello  </p>
-        <a ./page2.html >page2<a/>
+    <p class="text">
+        hello  
+        <a href="page2.html">page2<a/>
+        </p>
 
 </body>
   </html>
