--- a/assignments/assignment-1/page2.html
+++ b/assignments/assignment-1/page2.html
@@ -4,14 +4,18 @@
 
     <title>page1</title>
 <style type="text/css" >a:link { text-decoration: underline; color: orange;}
-a:visited { text-decoration: underline; color: darkorchid; }
-a:hover {text-decoration: none; color: orange;}
-a:active {text-decoration: none; color:darkorchid;
-font-family: Arial, sans-serif; color:orange; font-size: 100px;}</style>
+a:visited { text-decoration: underline; color: orange; }
+a:hover {text-decoration: none; color: darkorchid; font-size: 200px;}
+a:active {text-decoration: none; color:darkorchid; font-size: 200px;}
+.text {font-family: Arial, sans-serif; color:orange; font-size: 100px;}</style>
   </head>
-<body lang="en">
-    <p>
+  <body lang="en">
+    <p class="text">
         hello
-        <a href="https://www.westerncape.gov.za/sites/www.westerncape.gov.za/files/gettyimages-1131332215.jpg">pic</a></p> 
-</body>
-  </html>
+        <br>
+        <a href="https://www.westerncape.gov.za/sites/www.westerncape.gov.za/files/gettyimages-1131332215.jpg" target="_blank">pic</a>
+        <br>
+        <a href="index.html">go back to page 1<a/>
+    </p> 
+  </body>
+</html>
