--- a/codestudio/proj2/index.html
+++ b/codestudio/proj2/index.html
@@ -7,25 +7,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Syne+Tactile&display=swap" rel="stylesheet">
     
 </head>
-<body>
-    <nav class="circles">
+    <nav class="nav__circles">
         <ul>
             <li><a href="#">
-                <i class="circle1"></i>     
+                <i class="nav__circles_circle1"></i>     
             </a></li>
 
             <li><a href="./page2.html">
-                <i class="circle2"></i>  
+                <i class="nav__circles_circle2"></i>  
             </a></li>
         </ul>
         </nav>
+    <header class="header">
     <h1>Could Ancient Remedies Hold the Answer to the Looming Antibiotics Crisis?</h1>
-    <h2><span class="grow"> 
+    <h2>
         One researcher thinks the drugs of the future might come from the past: botanical treatments long overlooked by Western medicine.</span>
         <br><br>
-        By Ferris Jabr
-        Sept. 14, 2016</h2>
-    <div class="container">
+        <span style="color: black;"> Ferris Jabr
+        Sept. 14, 2016</span></h2>
+    </header>
+    <body>
+        <div class="body__container">
         <p>
         On a warm, clear evening in March, with the sun still hanging above the horizon, Cassandra Quave climbed aboard a jalapeño-green 4-by-4 and started to drive across her father’s ranch in Arcadia, Fla. Surveying the landscape, most people would have seen a homogenous mat of pasture and weeds punctuated by the occasional tree. Quave saw something quite different: a vast botanical tapestry, rich as a Persian rug. On a wire fence, a Smilax vine <span class="breaker"></span> dangled menacingly pointed leaves, like a necklace of shark’s teeth. Beneath it, tiny wild daisies <span class="breaker"></span>  and mint <span class="breaker"></span> ornamented the grass <span class="breaker"></span>  with pink tassels and purple cornets. Up above, on the sloping branches of oak trees <span class="breaker"></span> , whiskery bromeliads <span class="breaker"></span> , Spanish moss <span class="breaker"></span> and the gray fronds of resurrection fern <span class="breaker"></span> tangled in a miniature jungle all their own.
         Each of these species intrigued Quave enough to merit a pause, a verbal greeting, a photo. An ethnobotanist based at Emory University in Atlanta, Quave, 38, has an unabashed fondness for all citizens of the kingdom plantae. But on this evening, her attention lingered on certain species more than others: those with the power to heal, with the potential to help prevent a looming medical apocalypse.
