--- a/assignments/assignment-1/index.html
+++ b/assignments/assignment-1/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
 
     <title>page1</title>
-    <style type="text/css" >a:link { text-decoration: underline; color: greenyellow;}
+    <style >a:link { text-decoration: underline; color: greenyellow;}
       a:visited { text-decoration: underline; color: greenyellow; }
       a:hover {text-decoration: none; color: olivedrab;font-size: 200px;}
       a:active {text-decoration: none; color:olivedrab; font-size: 200px;}
       .text {font-family: Arial, sans-serif; color:greenyellow; font-size: 100px;}</style>
   </head>
-<body lang="en">
+<body>
     <p class="text">
         hello  
-        <a href="page2.html">page2<a/>
+        <a href="page2.html">page2</a>
         </p>
 
 </body>
