--- a/assignments/assignment-1/page2.html
+++ b/assignments/assignment-1/page2.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
 
     <title>page1</title>
-<style type="text/css" >a:link { text-decoration: underline; color: orange;}
+<style >a:link { text-decoration: underline; color: orange;}
 a:visited { text-decoration: underline; color: orange; }
 a:hover {text-decoration: none; color: darkorchid; font-size: 200px;}
 a:active {text-decoration: none; color:darkorchid; font-size: 200px;}
 .text {font-family: Arial, sans-serif; color:orange; font-size: 100px;}</style>
   </head>
-  <body lang="en">
+  <body >
     <p class="text">
         hello
         <br>
         <a href="https://www.westerncape.gov.za/sites/www.westerncape.gov.za/files/gettyimages-1131332215.jpg" target="_blank">pic</a>
         <br>
-        <a href="index.html">go back to page 1<a/>
+        <a href="index.html">go back to page 1</a>
     </p> 
   </body>
 </html>
