--- a/assignments/assignment-3/index.html
+++ b/assignments/assignment-3/index.html
@@ -10,25 +10,14 @@
 <body>
     <div class="header">
         <h1 id="title">100 Fish</h1>
-        <section class="headbuttons">
+        <div class="headbuttons">
         <a href="#"><button class="headbutton">About</button></a>
-        <a href="#"><button class="headbutton">Sort</button></a>
-        </section>
+        <a href="#"><button class="headbutton">Filter</button></a>
+        </div>
     </div>
     <section class="navContainer">
-        <h2 class="sort">Sort:</h2>
+        <h2 class="filter">Filter:</h2>
         <div class="category1">
-            <h2>Alphabetically</h2>
-            <ul>
-                <li>
-                    <a href="#"><button>By Common Name</button></a>
-                </li>
-                <li>
-                    <a href="#"><button>By Latin Name</button></a>
-                </li>
-            </ul>
-        </div>
-        <div class="category2">
             <h2>By Population Status</h2>
             <ul>
                 <li>
@@ -39,7 +28,7 @@
                 </li>
             </ul>
         </div>
-        <div class="category3">
+        <div class="category2">
         <h2>By Habitat</h2>
         <ul>
             <li>
