styled w active/declining functionality

--- a/assignments/assignment-3/active.html
+++ b/assignments/assignment-3/active.html
@@ -81,6 +81,6 @@
         <section id="fish-container">
         </section>
     </main>
-    <script src="js/main.js"></script>
+    <script src="js/active.js"></script>
 </body>
 </html>
