--- a/exercises/exercise7/index.html
+++ b/exercises/exercise7/index.html
@@ -1,25 +1,13 @@
-const fetchMovies = async () => {
-    const response = await fetch('https://api.airtable.com/v0/appxfJxfQb92yyKkg/Table%201?maxRecords=100&view=Grid%20view&api_key=keykxG25CNr82Rf9Y').then(data => data.json());
-
-    console.log(response);
-
-    const moviesContainer = document.getElementById('movies-container');
-
-    response.records.forEach(movie => {
-        console.log(movie.fields);
-        const articleEl = document.createElement('article');
-        const titleEl = document.createElement('div');
-        const genreEl = document.createElement('div');
-        const imdbUrlEl = document.createElement('div');
-        const releaseDateEl = document.createElement('div');
-
-        titleEl.innerHTML = movie.fields.Title;
-        genreEl.innerHTML = movie.fields.Genre;
-
-        articleEl.appendChild(titleEl);
-
-        moviesContainer.appendChild(articleEl);
-    });
-};
-
-fetchMovies();
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>assnmnt3</title>
+    <link href="./css/main.css" rel="stylesheet"/>
+</head>
+<body>
+    <script src="js/active.js"></script>
+</body>
+</html>
