--- a/assignments/assignment-3/about.html
+++ b/assignments/assignment-3/about.html
@@ -23,7 +23,7 @@
             <br>
             Core 2: Interaction Studio
             <br>
-            Communication Design program
+            Communication Design BFA
             <br>
             Parsons School of Design
             <br>
