--- a/assignments/assignment-3/about.html
+++ b/assignments/assignment-3/about.html
@@ -11,8 +11,8 @@
         <div class="header">
             <h1 id="title"><a href="./index.html">100 Fish</a></h1>
             <div class="headbuttons">
-            <a href="./about.html"><button class="headbutton">About</button></a>
             <a href="./index.html"><button class="headbutton">Fish</button></a>
+            <a href="./about.html"><button class="activebtn">About</button></a>
             </div>
         </div>
         <div id="explanation">
