--- a/assignments/assignment-3/antarctic.html
+++ b/assignments/assignment-3/antarctic.html
@@ -11,7 +11,7 @@
         <div class="header">
             <h1 id="title"><a href="./index.html">100 Fish</a></h1>
             <div class="headbuttons">
-                <button class="tagbtn">Fish of the Atlantic Ocean</button>
+                <button class="tagbtn">Fish of the Antarctic Ocean</button>
             <button onclick="myFunction()" class="filterbutton">Filter</button>
             <a href="./about.html"><button class="headbutton">About</button></a>
             </div>
@@ -82,6 +82,6 @@
         <section id="fish-container">
         </section>
     </main>
-    <script src="js/atlantic.js"></script>
+    <script src="js/antarctic.js"></script>
 </body>
 </html>
