--- a/assignments/assignment-3/declining.html
+++ b/assignments/assignment-3/declining.html
@@ -11,8 +11,9 @@
         <div class="header">
             <h1 id="title"><a href="./index.html">100 Fish</a></h1>
             <div class="headbuttons">
-            <a href="./about.html"><button class="headbutton">About</button></a>
+                <button class="tagbtn">Declining Population</button>
             <button onclick="myFunction()" class="filterbutton">Filter</button>
+            <a href="./about.html"><button class="headbutton">About</button></a>
             </div>
         </div>
         <section id="nav" class="navContainer">
