cowboy slay moment

--- a/assignments/assignment-3/index.html
+++ b/assignments/assignment-3/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assnmnt3</title>
     <link href="./css/main.css" rel="stylesheet"/>
+    <script
+    type="text/javascript"
+    src="https://code.jquery.com/jquery-1.9.1.js"
+  ></script>
 </head>
 <body>
         <div class="header">
