--- a/codestudio/proj4/cowboytest.html
+++ b/codestudio/proj4/cowboytest.html
@@ -42,6 +42,7 @@ I reckon you should try typing out a few rootin' tootin' words in this here box!
                         <button type="button" id="button">Let's ride!</button>
                     </div>
                 </div>
+            <section id="cowboybox">
             <div id="nashead" class="head">
                 <img src="assets/nas.png" width="130px">
             </div>
@@ -90,6 +91,7 @@ I reckon you should try typing out a few rootin' tootin' words in this here box!
             <div id="pants5" class="legs">
                 <img src="assets/woolychaps.png" width="180px">
             </div>
+                </section>
             <!-- <div class="draggable" id="boot1" >
                 <img src="assets/boot1.png" width="100%">
             </div> -->
