--- a/codestudio/proj4/cowboytest.html
+++ b/codestudio/proj4/cowboytest.html
@@ -36,7 +36,7 @@ I reckon you should try typing out a few rootin' tootin' words in this here box!
                 </textarea>
                 <div id="otherside">
                     <div id="about">
-                        <p id="about">this website was made in spring of 2022 by GRETEL DOUGHERTY </p>
+                        <p id="about">this website was made <br> by GRETEL DOUGHERTY <br>in spring of 2022 </p>
                             <audio src="assets/cowboysweetheart.mp3"></audio>
                     </div>
                     <div class="alert">
