--- a/codestudio/proj4GOOD BUT NEEDS PIX & SERIF/index.html
+++ b/codestudio/proj4GOOD BUT NEEDS PIX & SERIF/index.html
@@ -16,9 +16,11 @@
     <header>
         <div class="scroll">
             <p>Well howdy there buckaroo! Welcome to Exquisite Cowboy, your one stop buildin' a cowboy shop. Enjoy!</p>
+            </div>
         </div>
     </header>
     <body>
+        <audio src="assets/cowboysweetheart.mp3" autoplay></audio>
             <img src="assets/body.png" id="manbody">
             <img src="assets/bodylegs.png" id="manlegs">
         <main id="flex">
@@ -35,14 +37,13 @@ I reckon you should try typing out a few rootin' tootin' words in this here box!
                 </textarea>
                 <div id="otherside">
                     <div id="about">
-                        <p id="about">this website was made <br> by GRETEL DOUGHERTY <br>in spring of 2022 </p>
-                            <audio src="assets/cowboysweetheart.mp3" autoplay></audio>
+                        <p id="about">this website was made <br> by GRETEL DOUGHERTY <br> in spring of 2022</p>
                     </div>
                     <div class="alert">
                         <button type="button" id="button">Let's ride!</button>
                     </div>
                 </div>
-            <section id="cowboybox">
+            </div>
             <div id="nashead" class="head">
                 <img src="assets/nas.png" width="130px">
             </div>
@@ -63,6 +64,7 @@ I reckon you should try typing out a few rootin' tootin' words in this here box!
             </div>
             <div id="nasbod" class="bod">
                 <img src="assets/nasbod3.png" width="167px">
+                </div id="bodycover"></div>
             </div>
             <div id="shirt2" class="bod">
                 <img src="assets/wezternshirt.png" width="187px">
@@ -91,11 +93,10 @@ I reckon you should try typing out a few rootin' tootin' words in this here box!
             <div id="pants5" class="legs">
                 <img src="assets/woolychaps.png" width="180px">
             </div>
-                </section>
             <!-- <div class="draggable" id="boot1" >
                 <img src="assets/boot1.png" width="100%">
             </div> -->
         </main>
-        <script src="js/test.js"></script>
+        <script src="js/main.js"></script>
     </body>
     </html>
