--- a/codestudio/proj4GOOD BUT NEEDS PIX & SERIF/music.html
+++ b/codestudio/proj4GOOD BUT NEEDS PIX & SERIF/music.html
@@ -41,6 +41,6 @@
             </div>     
             <p>welcome</p>
         </main>
-        <script src="js/main.js"></script>
+        <script src="js/drag.js"></script>
     </body>
 </html>
