--- a/exercises/exercise7/index.html
+++ b/exercises/exercise7/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>assnmnt3</title>
-    <link href="./css/main.css" rel="stylesheet"/>
-</head>
-<body>
-    <script src="js/active.js"></script>
-</body>
+<!doctype html>
+<html>
+    <head>
+        <title>Exercise 7</title>
+    </head>
+    <body>
+        <main>
+            <section id="movies-container">
+
+            </section>
+        </main>
+        <script src="js/main.js"></script>
+    </body>
 </html>
