--- a/exercises/exercise3/about.html
+++ b/exercises/exercise3/about.html
@@ -16,7 +16,7 @@
                 <h1>
                     bugs r cool
                 </h1>
-                <a href="#">yay</a>
+                <a href="index.html">yay</a>
             </section>
         </main>
     </body>
