--- a/exercises/exercise10/index.html
+++ b/exercises/exercise10/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>exercise4</title>
+        <title>exercise10</title>
         <meta name="viewport" content= "width=device-width, initial-scale=1.0">
         <link href="css/main.css" rel="stylesheet"/>
     </head>
@@ -12,17 +12,12 @@
         <main class="content">
             <section class="flex-col">
                 <div>
-                    <textarea id="task-textarea">
-
-                    </textarea>
+                    <textarea id="task-textarea"></textarea>
                 </div>
                 <button type="button" id="add-task-btn">add task</button>
             </section>
-
             <section class="flex-col">
-                <div id="task-container">
-
-                </div>
+                <div id="task-container"></div>
             </section>
         </main>
         <script src="js/main.js"></script>
