--- a/assignments/assignment-5/index.html
+++ b/assignments/assignment-5/index.html
@@ -8,7 +8,7 @@
         <main class="content">
             <section>
                 <form id="madlib-form">
-                    <input type="text" name="input-1" placeholder="Noun" required id="yeah"/>
+                    <input type="text" name="input-1" placeholder="Noun" required/>
                     <input type="text" name="input-2" placeholder="Place" required />
                     <input type="text" name="input-3" placeholder="Creature or Object" required />
                     <input type="text" name="input-4" placeholder="Number" required />
