--- a/assignments/assignment-4/index2.html
+++ b/assignments/assignment-4/index2.html
@@ -5,14 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>assn4</title>
-        <link href="./css/main.css" rel="stylesheet"/>
+        <link href="css/xtra.css" rel="stylesheet"/>
     </head>
     <body>
+        <header id="header">
+            <h1 id="header">PRINCE ALBUM COVERS 2006-2021</h1>
+        </header>
         <main>
            <section id="album-container"></section>
-           <nav class="slideshow-nav">
-            <button id="prev">Previous</button>
-            <button id="next">Next</button>
+           <section id="slideshow-container"></section>
+           <nav class="nav">
+            <button id="prev">PREVIOUS</button>
+            <button id="next">NEXT</button>
         </nav>
         </main>
         <script src="js/anothaone.js"></script>
