--- a/assignments/assignment-4/text.html
+++ b/assignments/assignment-4/text.html
@@ -5,20 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>assn4</title>
-        <link href="css/xtra.css" rel="stylesheet"/>
+        <link href="css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <header id="header">
-            <h1 id="header">PRINCE ALBUM COVERS 2006-2021</h1>
+            <h1>PRINCE ALBUMS THROUGH THE YEARS</h1>
+            <a href="./index2.html">
+                <button id="slideshow">SLIDESHOW</button>
+            </a>
         </header>
         <main>
            <section id="album-container"></section>
-           <section id="slideshow-container"></section>
-           <nav class="nav">
-            <button id="prev">PREVIOUS</button>
-            <button id="next">NEXT</button>
-        </nav>
         </main>
-        <script src="js/anothaone.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
